tests/fixtures/invalid/extern_local_initializer.c
int main(void) {
    extern int value = 3;
    return value;
}
